# resta_um

./: .gitmodules  CMakeLists.txt
cmake/: FindImmer.cmake  FindLager.cmake  FindZug.cmake
src/: CMakeLists.txt
src/resta_um/: CMakeLists.txt  main.cpp
src/resta_um/model/: actions.hpp  common.hpp  model.cpp  model.hpp
src/resta_um/qt/: qmodel.cpp  qmodel.hpp
src/resta_um/qt/qml/: main.qml
